corrected  color contrast issue.

--- a/styles/temples.css
+++ b/styles/temples.css
@@ -7,7 +7,7 @@ footer {
 header {
   display: block;
   gap: 1rem;
-  background-color: rgb(2, 45, 54);
+  background-color: rgb(2, 45, 54);;
   padding: 1rem;
   margin: 0 auto;
 }
@@ -20,16 +20,14 @@ header {
 }
 
 nav {
-  display: block;
-  background-color: rgb(2, 45, 54);
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .navigation li {
   margin: 0 auto;
   list-style: none;
-}
-
-.navigation li {
   display: none;
 }
 
@@ -120,7 +118,7 @@ figure {
 
 footer {
   margin-top: 3rem;
-  background-color: rgb(2, 45, 54);
+  background-color: rgb(2, 45, 54);;
   padding: 0.7rem;
 }
 
